# fast-edges-extraction

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build_wheels.yml  install_and_test.yml  test_install_from_pypi.yml
examples/: compare_running_time.py
fast_edge_extraction/: __init__.py  _cython.c  _cython.cpp  _cython.pyx  _numba.py  _torch.py  _vtk.py  blabla.c  cython.c  numba.py  torch.py
fast_edges_extraction/: __init__.py  _extract_edges.pyx
test/: test_consistency.py
tests/: test_consistency.py
